--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "next": "10.0.9",
     "next-connect": "^0.10.1",
     "node-sass": "5.0.0",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
