--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "0.21.1",
+    "jwt-decode": "^3.1.2",
     "next": "10.0.9",
     "next-connect": "^0.10.1",
     "node-sass": "5.0.0",
